Try to fix the Could not find or access '/tmp/eac-icons.tar' error

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,7 @@
   docker_container:
     name: wine-eac-desktop-icon-extraction
     image: "{{ eac_image }}"
+    container_default_behavior: compatibility
     read_only: yes
     entrypoint: /bin/sh
     tty: yes
